deploy/validation-webhook.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validation-webhook
  namespace: validation-webhook
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: validation-webhook
  type: ClusterIP
