deploy/validation-webhook.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: validation-webhook
  namespace: validation-webhook
spec:
  host: validation-webhook.apps.rogbas-stg.o9a7.s1.devshift.org
  port:
    targetPort: http
  subdomain: ""
  tls:
    termination: edge
  to:
    kind: Service
    name: validation-webhook
    weight: 100
  wildcardPolicy: None
