deploy/group-validation.ValidatingWebhookConfiguration.yaml
apiVersion: "admissionregistration.k8s.io/v1beta1"
kind: "ValidatingWebhookConfiguration"
metadata: 
  name: "validate-groups"
  namespace: ""
webhooks: 
  - clientConfig: 
      url: "https://validation-webhook.apps.rogbas-stg.o9a7.s1.devshift.org"
    failurePolicy: 
      "Fail"
    name: "validate.group.change"
    rules: 
      - operations: 
          - "UPDATE"
          - "CREATE"
          - "DELETE"
        apiGroups: 
          - "user.openshift.io"
        apiVersions: 
          - "*"
        resources: 
          - "groups"
        scope: 
          "Namespaced"
